# hybridIDS

./: .gitignore  CMakeLists.txt  Dockerfile  ReadME.txt  build.sh  conanfile.py
config/: config.json  rules.json  whitelist.txt
include/: config_utils.h  heuristic_engine.h  logger.h  nftables_control.h  packet.h  rule_engine.h  sniffer.h
src/: config_utils.cpp  heuristic_engine.cpp  logger.cpp  main.cpp  nftables_control.cpp  packet.cpp  rule_engine.cpp  sniffer.cpp
tests/: CMakeLists.txt  unit_tests.cpp
